fitxers/tab.output
Terminals unused in grammar

    SEMICOLON


Grammar

    0 $accept: programa $end

    1 programa: expressio_list

    2 expressio_list: expressio ENDLINE
    3               | expressio ENDLINE expressio_list

    4 expressio: ID ASSIGN OPERATION
    5          | ID ASSIGN OPERATION MODE
    6          | ID ASSIGN OPERATION_BOOLEAN
    7          | ID_BOOL ASSIGN OPERATION_BOOLEAN
    8          | ID ASSIGN OPERATION_STRING
    9          | OPERATION MODE
   10          | OPERATION
   11          | OPERATION_BOOLEAN
   12          | OPERATION_STRING

   13 OPERATION: OPERATION PLUS OPERATION2
   14          | OPERATION MINUS OPERATION2
   15          | OPERATION2

   16 OPERATION2: OPERATION2 MULTIPLY OPERATION3
   17           | OPERATION2 DIVIDE OPERATION3
   18           | OPERATION2 MOD OPERATION3
   19           | OPERATION3

   20 OPERATION3: OPERATION4 POWER OPERATION3
   21           | OPERATION4

   22 OPERATION4: SIN OPERATION4
   23           | COS OPERATION4
   24           | TAN OPERATION4
   25           | INTEGER
   26           | MINUS INTEGER
   27           | FLOAT
   28           | MINUS FLOAT
   29           | STRING
   30           | ID
   31           | MINUS ID
   32           | OPEN_PARENTHESIS OPERATION CLOSED_PARENTHESIS

   33 OPERATION_STRING: LEN OPERATION
   34                 | SUBSTR OPEN_PARENTHESIS OPERATION COMMA INTEGER CLOSED_PARENTHESIS

   35 OPERATION_BOOLEAN: OPERATION_BOOLEAN OR OPERATION_BOOLEAN1
   36                  | OPERATION_BOOLEAN1

   37 OPERATION_BOOLEAN1: OPERATION_BOOLEAN2
   38                   | OPERATION_BOOLEAN1 AND OPERATION_BOOLEAN2

   39 OPERATION_BOOLEAN2: OPERATION_BOOLEAN3
   40                   | NOT OPERATION_BOOLEAN2

   41 OPERATION_BOOLEAN3: OPEN_PARENTHESIS OPERATION_BOOLEAN CLOSED_PARENTHESIS
   42                   | TRUE
   43                   | ID_BOOL
   44                   | FALSE
   45                   | OPERATION EQUAL OPERATION
   46                   | OPERATION NOT_EQUAL OPERATION
   47                   | OPERATION GREATER_EQUAL OPERATION
   48                   | OPERATION GREATER_THAN OPERATION
   49                   | OPERATION LESS_THAN OPERATION
   50                   | OPERATION LESS_EQUAL OPERATION


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INTEGER <enter> (258) 25 26 34
    FALSE <boolean> (259) 44
    TRUE <boolean> (260) 42
    MODE <mode> (261) 5 9
    FLOAT <real> (262) 27 28
    ID <ident> (263) 4 5 6 8 30 31
    ID_BOOL <ident> (264) 7 43
    STRING <cadena> (265) 29
    COMMA <sense_valor> (266) 34
    LEN <sense_valor> (267) 33
    SUBSTR <sense_valor> (268) 34
    SIN <sense_valor> (269) 22
    COS <sense_valor> (270) 23
    TAN <sense_valor> (271) 24
    AND <sense_valor> (272) 38
    OR <sense_valor> (273) 35
    NOT <sense_valor> (274) 40
    PLUS <sense_valor> (275) 13
    MINUS <sense_valor> (276) 14 26 28 31
    MULTIPLY <sense_valor> (277) 16
    DIVIDE <sense_valor> (278) 17
    MOD <sense_valor> (279) 18
    POWER <sense_valor> (280) 20
    CLOSED_PARENTHESIS <sense_valor> (281) 32 34 41
    OPEN_PARENTHESIS <sense_valor> (282) 32 34 41
    ASSIGN <sense_valor> (283) 4 5 6 7 8
    ENDLINE <sense_valor> (284) 2 3
    SEMICOLON <sense_valor> (285)
    GREATER_THAN <sense_valor> (286) 48
    GREATER_EQUAL <sense_valor> (287) 47
    LESS_THAN <sense_valor> (288) 49
    LESS_EQUAL <sense_valor> (289) 50
    EQUAL <sense_valor> (290) 45
    NOT_EQUAL <sense_valor> (291) 46


Nonterminals, with rules where they appear

    $accept (37)
        on left: 0
    programa <sense_valor> (38)
        on left: 1
        on right: 0
    expressio_list (39)
        on left: 2 3
        on right: 1 3
    expressio <expr_val> (40)
        on left: 4 5 6 7 8 9 10 11 12
        on right: 2 3
    OPERATION <expr_val> (41)
        on left: 13 14 15
        on right: 4 5 9 10 13 14 32 33 34 45 46 47 48 49 50
    OPERATION2 <expr_val> (42)
        on left: 16 17 18 19
        on right: 13 14 15 16 17 18
    OPERATION3 <expr_val> (43)
        on left: 20 21
        on right: 16 17 18 19 20
    OPERATION4 <expr_val> (44)
        on left: 22 23 24 25 26 27 28 29 30 31 32
        on right: 20 21 22 23 24
    OPERATION_STRING <expr_val> (45)
        on left: 33 34
        on right: 8 12
    OPERATION_BOOLEAN <expr_val> (46)
        on left: 35 36
        on right: 6 7 11 35 41
    OPERATION_BOOLEAN1 <expr_val> (47)
        on left: 37 38
        on right: 35 36 38
    OPERATION_BOOLEAN2 <expr_val> (48)
        on left: 39 40
        on right: 37 38 40
    OPERATION_BOOLEAN3 <expr_val> (49)
        on left: 41 42 43 44 45 46 47 48 49 50
        on right: 39


State 0

    0 $accept: • programa $end

    INTEGER           shift, and go to state 1
    FALSE             shift, and go to state 2
    TRUE              shift, and go to state 3
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 5
    ID_BOOL           shift, and go to state 6
    STRING            shift, and go to state 7
    LEN               shift, and go to state 8
    SUBSTR            shift, and go to state 9
    SIN               shift, and go to state 10
    COS               shift, and go to state 11
    TAN               shift, and go to state 12
    NOT               shift, and go to state 13
    MINUS             shift, and go to state 14
    OPEN_PARENTHESIS  shift, and go to state 15

    programa            go to state 16
    expressio_list      go to state 17
    expressio           go to state 18
    OPERATION           go to state 19
    OPERATION2          go to state 20
    OPERATION3          go to state 21
    OPERATION4          go to state 22
    OPERATION_STRING    go to state 23
    OPERATION_BOOLEAN   go to state 24
    OPERATION_BOOLEAN1  go to state 25
    OPERATION_BOOLEAN2  go to state 26
    OPERATION_BOOLEAN3  go to state 27


State 1

   25 OPERATION4: INTEGER •

    $default  reduce using rule 25 (OPERATION4)


State 2

   44 OPERATION_BOOLEAN3: FALSE •

    $default  reduce using rule 44 (OPERATION_BOOLEAN3)


State 3

   42 OPERATION_BOOLEAN3: TRUE •

    $default  reduce using rule 42 (OPERATION_BOOLEAN3)


State 4

   27 OPERATION4: FLOAT •

    $default  reduce using rule 27 (OPERATION4)


State 5

    4 expressio: ID • ASSIGN OPERATION
    5          | ID • ASSIGN OPERATION MODE
    6          | ID • ASSIGN OPERATION_BOOLEAN
    8          | ID • ASSIGN OPERATION_STRING
   30 OPERATION4: ID •

    ASSIGN  shift, and go to state 28

    $default  reduce using rule 30 (OPERATION4)


State 6

    7 expressio: ID_BOOL • ASSIGN OPERATION_BOOLEAN
   43 OPERATION_BOOLEAN3: ID_BOOL •

    ASSIGN  shift, and go to state 29

    $default  reduce using rule 43 (OPERATION_BOOLEAN3)


State 7

   29 OPERATION4: STRING •

    $default  reduce using rule 29 (OPERATION4)


State 8

   33 OPERATION_STRING: LEN • OPERATION

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 30
    STRING            shift, and go to state 7
    SIN               shift, and go to state 10
    COS               shift, and go to state 11
    TAN               shift, and go to state 12
    MINUS             shift, and go to state 14
    OPEN_PARENTHESIS  shift, and go to state 31

    OPERATION   go to state 32
    OPERATION2  go to state 20
    OPERATION3  go to state 21
    OPERATION4  go to state 22


State 9

   34 OPERATION_STRING: SUBSTR • OPEN_PARENTHESIS OPERATION COMMA INTEGER CLOSED_PARENTHESIS

    OPEN_PARENTHESIS  shift, and go to state 33


State 10

   22 OPERATION4: SIN • OPERATION4

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 30
    STRING            shift, and go to state 7
    SIN               shift, and go to state 10
    COS               shift, and go to state 11
    TAN               shift, and go to state 12
    MINUS             shift, and go to state 14
    OPEN_PARENTHESIS  shift, and go to state 31

    OPERATION4  go to state 34


State 11

   23 OPERATION4: COS • OPERATION4

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 30
    STRING            shift, and go to state 7
    SIN               shift, and go to state 10
    COS               shift, and go to state 11
    TAN               shift, and go to state 12
    MINUS             shift, and go to state 14
    OPEN_PARENTHESIS  shift, and go to state 31

    OPERATION4  go to state 35


State 12

   24 OPERATION4: TAN • OPERATION4

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 30
    STRING            shift, and go to state 7
    SIN               shift, and go to state 10
    COS               shift, and go to state 11
    TAN               shift, and go to state 12
    MINUS             shift, and go to state 14
    OPEN_PARENTHESIS  shift, and go to state 31

    OPERATION4  go to state 36


State 13

   40 OPERATION_BOOLEAN2: NOT • OPERATION_BOOLEAN2

    INTEGER           shift, and go to state 1
    FALSE             shift, and go to state 2
    TRUE              shift, and go to state 3
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 30
    ID_BOOL           shift, and go to state 37
    STRING            shift, and go to state 7
    SIN               shift, and go to state 10
    COS               shift, and go to state 11
    TAN               shift, and go to state 12
    NOT               shift, and go to state 13
    MINUS             shift, and go to state 14
    OPEN_PARENTHESIS  shift, and go to state 15

    OPERATION           go to state 38
    OPERATION2          go to state 20
    OPERATION3          go to state 21
    OPERATION4          go to state 22
    OPERATION_BOOLEAN2  go to state 39
    OPERATION_BOOLEAN3  go to state 27


State 14

   26 OPERATION4: MINUS • INTEGER
   28           | MINUS • FLOAT
   31           | MINUS • ID

    INTEGER  shift, and go to state 40
    FLOAT    shift, and go to state 41
    ID       shift, and go to state 42


State 15

   32 OPERATION4: OPEN_PARENTHESIS • OPERATION CLOSED_PARENTHESIS
   41 OPERATION_BOOLEAN3: OPEN_PARENTHESIS • OPERATION_BOOLEAN CLOSED_PARENTHESIS

    INTEGER           shift, and go to state 1
    FALSE             shift, and go to state 2
    TRUE              shift, and go to state 3
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 30
    ID_BOOL           shift, and go to state 37
    STRING            shift, and go to state 7
    SIN               shift, and go to state 10
    COS               shift, and go to state 11
    TAN               shift, and go to state 12
    NOT               shift, and go to state 13
    MINUS             shift, and go to state 14
    OPEN_PARENTHESIS  shift, and go to state 15

    OPERATION           go to state 43
    OPERATION2          go to state 20
    OPERATION3          go to state 21
    OPERATION4          go to state 22
    OPERATION_BOOLEAN   go to state 44
    OPERATION_BOOLEAN1  go to state 25
    OPERATION_BOOLEAN2  go to state 26
    OPERATION_BOOLEAN3  go to state 27


State 16

    0 $accept: programa • $end

    $end  shift, and go to state 45


State 17

    1 programa: expressio_list •

    $default  reduce using rule 1 (programa)


State 18

    2 expressio_list: expressio • ENDLINE
    3               | expressio • ENDLINE expressio_list

    ENDLINE  shift, and go to state 46


State 19

    9 expressio: OPERATION • MODE
   10          | OPERATION •
   13 OPERATION: OPERATION • PLUS OPERATION2
   14          | OPERATION • MINUS OPERATION2
   45 OPERATION_BOOLEAN3: OPERATION • EQUAL OPERATION
   46                   | OPERATION • NOT_EQUAL OPERATION
   47                   | OPERATION • GREATER_EQUAL OPERATION
   48                   | OPERATION • GREATER_THAN OPERATION
   49                   | OPERATION • LESS_THAN OPERATION
   50                   | OPERATION • LESS_EQUAL OPERATION

    MODE           shift, and go to state 47
    PLUS           shift, and go to state 48
    MINUS          shift, and go to state 49
    GREATER_THAN   shift, and go to state 50
    GREATER_EQUAL  shift, and go to state 51
    LESS_THAN      shift, and go to state 52
    LESS_EQUAL     shift, and go to state 53
    EQUAL          shift, and go to state 54
    NOT_EQUAL      shift, and go to state 55

    $default  reduce using rule 10 (expressio)


State 20

   15 OPERATION: OPERATION2 •
   16 OPERATION2: OPERATION2 • MULTIPLY OPERATION3
   17           | OPERATION2 • DIVIDE OPERATION3
   18           | OPERATION2 • MOD OPERATION3

    MULTIPLY  shift, and go to state 56
    DIVIDE    shift, and go to state 57
    MOD       shift, and go to state 58

    $default  reduce using rule 15 (OPERATION)


State 21

   19 OPERATION2: OPERATION3 •

    $default  reduce using rule 19 (OPERATION2)


State 22

   20 OPERATION3: OPERATION4 • POWER OPERATION3
   21           | OPERATION4 •

    POWER  shift, and go to state 59

    $default  reduce using rule 21 (OPERATION3)


State 23

   12 expressio: OPERATION_STRING •

    $default  reduce using rule 12 (expressio)


State 24

   11 expressio: OPERATION_BOOLEAN •
   35 OPERATION_BOOLEAN: OPERATION_BOOLEAN • OR OPERATION_BOOLEAN1

    OR  shift, and go to state 60

    $default  reduce using rule 11 (expressio)


State 25

   36 OPERATION_BOOLEAN: OPERATION_BOOLEAN1 •
   38 OPERATION_BOOLEAN1: OPERATION_BOOLEAN1 • AND OPERATION_BOOLEAN2

    AND  shift, and go to state 61

    $default  reduce using rule 36 (OPERATION_BOOLEAN)


State 26

   37 OPERATION_BOOLEAN1: OPERATION_BOOLEAN2 •

    $default  reduce using rule 37 (OPERATION_BOOLEAN1)


State 27

   39 OPERATION_BOOLEAN2: OPERATION_BOOLEAN3 •

    $default  reduce using rule 39 (OPERATION_BOOLEAN2)


State 28

    4 expressio: ID ASSIGN • OPERATION
    5          | ID ASSIGN • OPERATION MODE
    6          | ID ASSIGN • OPERATION_BOOLEAN
    8          | ID ASSIGN • OPERATION_STRING

    INTEGER           shift, and go to state 1
    FALSE             shift, and go to state 2
    TRUE              shift, and go to state 3
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 30
    ID_BOOL           shift, and go to state 37
    STRING            shift, and go to state 7
    LEN               shift, and go to state 8
    SUBSTR            shift, and go to state 9
    SIN               shift, and go to state 10
    COS               shift, and go to state 11
    TAN               shift, and go to state 12
    NOT               shift, and go to state 13
    MINUS             shift, and go to state 14
    OPEN_PARENTHESIS  shift, and go to state 15

    OPERATION           go to state 62
    OPERATION2          go to state 20
    OPERATION3          go to state 21
    OPERATION4          go to state 22
    OPERATION_STRING    go to state 63
    OPERATION_BOOLEAN   go to state 64
    OPERATION_BOOLEAN1  go to state 25
    OPERATION_BOOLEAN2  go to state 26
    OPERATION_BOOLEAN3  go to state 27


State 29

    7 expressio: ID_BOOL ASSIGN • OPERATION_BOOLEAN

    INTEGER           shift, and go to state 1
    FALSE             shift, and go to state 2
    TRUE              shift, and go to state 3
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 30
    ID_BOOL           shift, and go to state 37
    STRING            shift, and go to state 7
    SIN               shift, and go to state 10
    COS               shift, and go to state 11
    TAN               shift, and go to state 12
    NOT               shift, and go to state 13
    MINUS             shift, and go to state 14
    OPEN_PARENTHESIS  shift, and go to state 15

    OPERATION           go to state 38
    OPERATION2          go to state 20
    OPERATION3          go to state 21
    OPERATION4          go to state 22
    OPERATION_BOOLEAN   go to state 65
    OPERATION_BOOLEAN1  go to state 25
    OPERATION_BOOLEAN2  go to state 26
    OPERATION_BOOLEAN3  go to state 27


State 30

   30 OPERATION4: ID •

    $default  reduce using rule 30 (OPERATION4)


State 31

   32 OPERATION4: OPEN_PARENTHESIS • OPERATION CLOSED_PARENTHESIS

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 30
    STRING            shift, and go to state 7
    SIN               shift, and go to state 10
    COS               shift, and go to state 11
    TAN               shift, and go to state 12
    MINUS             shift, and go to state 14
    OPEN_PARENTHESIS  shift, and go to state 31

    OPERATION   go to state 66
    OPERATION2  go to state 20
    OPERATION3  go to state 21
    OPERATION4  go to state 22


State 32

   13 OPERATION: OPERATION • PLUS OPERATION2
   14          | OPERATION • MINUS OPERATION2
   33 OPERATION_STRING: LEN OPERATION •

    PLUS   shift, and go to state 48
    MINUS  shift, and go to state 49

    $default  reduce using rule 33 (OPERATION_STRING)


State 33

   34 OPERATION_STRING: SUBSTR OPEN_PARENTHESIS • OPERATION COMMA INTEGER CLOSED_PARENTHESIS

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 30
    STRING            shift, and go to state 7
    SIN               shift, and go to state 10
    COS               shift, and go to state 11
    TAN               shift, and go to state 12
    MINUS             shift, and go to state 14
    OPEN_PARENTHESIS  shift, and go to state 31

    OPERATION   go to state 67
    OPERATION2  go to state 20
    OPERATION3  go to state 21
    OPERATION4  go to state 22


State 34

   22 OPERATION4: SIN OPERATION4 •

    $default  reduce using rule 22 (OPERATION4)


State 35

   23 OPERATION4: COS OPERATION4 •

    $default  reduce using rule 23 (OPERATION4)


State 36

   24 OPERATION4: TAN OPERATION4 •

    $default  reduce using rule 24 (OPERATION4)


State 37

   43 OPERATION_BOOLEAN3: ID_BOOL •

    $default  reduce using rule 43 (OPERATION_BOOLEAN3)


State 38

   13 OPERATION: OPERATION • PLUS OPERATION2
   14          | OPERATION • MINUS OPERATION2
   45 OPERATION_BOOLEAN3: OPERATION • EQUAL OPERATION
   46                   | OPERATION • NOT_EQUAL OPERATION
   47                   | OPERATION • GREATER_EQUAL OPERATION
   48                   | OPERATION • GREATER_THAN OPERATION
   49                   | OPERATION • LESS_THAN OPERATION
   50                   | OPERATION • LESS_EQUAL OPERATION

    PLUS           shift, and go to state 48
    MINUS          shift, and go to state 49
    GREATER_THAN   shift, and go to state 50
    GREATER_EQUAL  shift, and go to state 51
    LESS_THAN      shift, and go to state 52
    LESS_EQUAL     shift, and go to state 53
    EQUAL          shift, and go to state 54
    NOT_EQUAL      shift, and go to state 55


State 39

   40 OPERATION_BOOLEAN2: NOT OPERATION_BOOLEAN2 •

    $default  reduce using rule 40 (OPERATION_BOOLEAN2)


State 40

   26 OPERATION4: MINUS INTEGER •

    $default  reduce using rule 26 (OPERATION4)


State 41

   28 OPERATION4: MINUS FLOAT •

    $default  reduce using rule 28 (OPERATION4)


State 42

   31 OPERATION4: MINUS ID •

    $default  reduce using rule 31 (OPERATION4)


State 43

   13 OPERATION: OPERATION • PLUS OPERATION2
   14          | OPERATION • MINUS OPERATION2
   32 OPERATION4: OPEN_PARENTHESIS OPERATION • CLOSED_PARENTHESIS
   45 OPERATION_BOOLEAN3: OPERATION • EQUAL OPERATION
   46                   | OPERATION • NOT_EQUAL OPERATION
   47                   | OPERATION • GREATER_EQUAL OPERATION
   48                   | OPERATION • GREATER_THAN OPERATION
   49                   | OPERATION • LESS_THAN OPERATION
   50                   | OPERATION • LESS_EQUAL OPERATION

    PLUS                shift, and go to state 48
    MINUS               shift, and go to state 49
    CLOSED_PARENTHESIS  shift, and go to state 68
    GREATER_THAN        shift, and go to state 50
    GREATER_EQUAL       shift, and go to state 51
    LESS_THAN           shift, and go to state 52
    LESS_EQUAL          shift, and go to state 53
    EQUAL               shift, and go to state 54
    NOT_EQUAL           shift, and go to state 55


State 44

   35 OPERATION_BOOLEAN: OPERATION_BOOLEAN • OR OPERATION_BOOLEAN1
   41 OPERATION_BOOLEAN3: OPEN_PARENTHESIS OPERATION_BOOLEAN • CLOSED_PARENTHESIS

    OR                  shift, and go to state 60
    CLOSED_PARENTHESIS  shift, and go to state 69


State 45

    0 $accept: programa $end •

    $default  accept


State 46

    2 expressio_list: expressio ENDLINE •
    3               | expressio ENDLINE • expressio_list

    INTEGER           shift, and go to state 1
    FALSE             shift, and go to state 2
    TRUE              shift, and go to state 3
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 5
    ID_BOOL           shift, and go to state 6
    STRING            shift, and go to state 7
    LEN               shift, and go to state 8
    SUBSTR            shift, and go to state 9
    SIN               shift, and go to state 10
    COS               shift, and go to state 11
    TAN               shift, and go to state 12
    NOT               shift, and go to state 13
    MINUS             shift, and go to state 14
    OPEN_PARENTHESIS  shift, and go to state 15

    $default  reduce using rule 2 (expressio_list)

    expressio_list      go to state 70
    expressio           go to state 18
    OPERATION           go to state 19
    OPERATION2          go to state 20
    OPERATION3          go to state 21
    OPERATION4          go to state 22
    OPERATION_STRING    go to state 23
    OPERATION_BOOLEAN   go to state 24
    OPERATION_BOOLEAN1  go to state 25
    OPERATION_BOOLEAN2  go to state 26
    OPERATION_BOOLEAN3  go to state 27


State 47

    9 expressio: OPERATION MODE •

    $default  reduce using rule 9 (expressio)


State 48

   13 OPERATION: OPERATION PLUS • OPERATION2

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 30
    STRING            shift, and go to state 7
    SIN               shift, and go to state 10
    COS               shift, and go to state 11
    TAN               shift, and go to state 12
    MINUS             shift, and go to state 14
    OPEN_PARENTHESIS  shift, and go to state 31

    OPERATION2  go to state 71
    OPERATION3  go to state 21
    OPERATION4  go to state 22


State 49

   14 OPERATION: OPERATION MINUS • OPERATION2

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 30
    STRING            shift, and go to state 7
    SIN               shift, and go to state 10
    COS               shift, and go to state 11
    TAN               shift, and go to state 12
    MINUS             shift, and go to state 14
    OPEN_PARENTHESIS  shift, and go to state 31

    OPERATION2  go to state 72
    OPERATION3  go to state 21
    OPERATION4  go to state 22


State 50

   48 OPERATION_BOOLEAN3: OPERATION GREATER_THAN • OPERATION

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 30
    STRING            shift, and go to state 7
    SIN               shift, and go to state 10
    COS               shift, and go to state 11
    TAN               shift, and go to state 12
    MINUS             shift, and go to state 14
    OPEN_PARENTHESIS  shift, and go to state 31

    OPERATION   go to state 73
    OPERATION2  go to state 20
    OPERATION3  go to state 21
    OPERATION4  go to state 22


State 51

   47 OPERATION_BOOLEAN3: OPERATION GREATER_EQUAL • OPERATION

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 30
    STRING            shift, and go to state 7
    SIN               shift, and go to state 10
    COS               shift, and go to state 11
    TAN               shift, and go to state 12
    MINUS             shift, and go to state 14
    OPEN_PARENTHESIS  shift, and go to state 31

    OPERATION   go to state 74
    OPERATION2  go to state 20
    OPERATION3  go to state 21
    OPERATION4  go to state 22


State 52

   49 OPERATION_BOOLEAN3: OPERATION LESS_THAN • OPERATION

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 30
    STRING            shift, and go to state 7
    SIN               shift, and go to state 10
    COS               shift, and go to state 11
    TAN               shift, and go to state 12
    MINUS             shift, and go to state 14
    OPEN_PARENTHESIS  shift, and go to state 31

    OPERATION   go to state 75
    OPERATION2  go to state 20
    OPERATION3  go to state 21
    OPERATION4  go to state 22


State 53

   50 OPERATION_BOOLEAN3: OPERATION LESS_EQUAL • OPERATION

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 30
    STRING            shift, and go to state 7
    SIN               shift, and go to state 10
    COS               shift, and go to state 11
    TAN               shift, and go to state 12
    MINUS             shift, and go to state 14
    OPEN_PARENTHESIS  shift, and go to state 31

    OPERATION   go to state 76
    OPERATION2  go to state 20
    OPERATION3  go to state 21
    OPERATION4  go to state 22


State 54

   45 OPERATION_BOOLEAN3: OPERATION EQUAL • OPERATION

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 30
    STRING            shift, and go to state 7
    SIN               shift, and go to state 10
    COS               shift, and go to state 11
    TAN               shift, and go to state 12
    MINUS             shift, and go to state 14
    OPEN_PARENTHESIS  shift, and go to state 31

    OPERATION   go to state 77
    OPERATION2  go to state 20
    OPERATION3  go to state 21
    OPERATION4  go to state 22


State 55

   46 OPERATION_BOOLEAN3: OPERATION NOT_EQUAL • OPERATION

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 30
    STRING            shift, and go to state 7
    SIN               shift, and go to state 10
    COS               shift, and go to state 11
    TAN               shift, and go to state 12
    MINUS             shift, and go to state 14
    OPEN_PARENTHESIS  shift, and go to state 31

    OPERATION   go to state 78
    OPERATION2  go to state 20
    OPERATION3  go to state 21
    OPERATION4  go to state 22


State 56

   16 OPERATION2: OPERATION2 MULTIPLY • OPERATION3

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 30
    STRING            shift, and go to state 7
    SIN               shift, and go to state 10
    COS               shift, and go to state 11
    TAN               shift, and go to state 12
    MINUS             shift, and go to state 14
    OPEN_PARENTHESIS  shift, and go to state 31

    OPERATION3  go to state 79
    OPERATION4  go to state 22


State 57

   17 OPERATION2: OPERATION2 DIVIDE • OPERATION3

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 30
    STRING            shift, and go to state 7
    SIN               shift, and go to state 10
    COS               shift, and go to state 11
    TAN               shift, and go to state 12
    MINUS             shift, and go to state 14
    OPEN_PARENTHESIS  shift, and go to state 31

    OPERATION3  go to state 80
    OPERATION4  go to state 22


State 58

   18 OPERATION2: OPERATION2 MOD • OPERATION3

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 30
    STRING            shift, and go to state 7
    SIN               shift, and go to state 10
    COS               shift, and go to state 11
    TAN               shift, and go to state 12
    MINUS             shift, and go to state 14
    OPEN_PARENTHESIS  shift, and go to state 31

    OPERATION3  go to state 81
    OPERATION4  go to state 22


State 59

   20 OPERATION3: OPERATION4 POWER • OPERATION3

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 30
    STRING            shift, and go to state 7
    SIN               shift, and go to state 10
    COS               shift, and go to state 11
    TAN               shift, and go to state 12
    MINUS             shift, and go to state 14
    OPEN_PARENTHESIS  shift, and go to state 31

    OPERATION3  go to state 82
    OPERATION4  go to state 22


State 60

   35 OPERATION_BOOLEAN: OPERATION_BOOLEAN OR • OPERATION_BOOLEAN1

    INTEGER           shift, and go to state 1
    FALSE             shift, and go to state 2
    TRUE              shift, and go to state 3
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 30
    ID_BOOL           shift, and go to state 37
    STRING            shift, and go to state 7
    SIN               shift, and go to state 10
    COS               shift, and go to state 11
    TAN               shift, and go to state 12
    NOT               shift, and go to state 13
    MINUS             shift, and go to state 14
    OPEN_PARENTHESIS  shift, and go to state 15

    OPERATION           go to state 38
    OPERATION2          go to state 20
    OPERATION3          go to state 21
    OPERATION4          go to state 22
    OPERATION_BOOLEAN1  go to state 83
    OPERATION_BOOLEAN2  go to state 26
    OPERATION_BOOLEAN3  go to state 27


State 61

   38 OPERATION_BOOLEAN1: OPERATION_BOOLEAN1 AND • OPERATION_BOOLEAN2

    INTEGER           shift, and go to state 1
    FALSE             shift, and go to state 2
    TRUE              shift, and go to state 3
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 30
    ID_BOOL           shift, and go to state 37
    STRING            shift, and go to state 7
    SIN               shift, and go to state 10
    COS               shift, and go to state 11
    TAN               shift, and go to state 12
    NOT               shift, and go to state 13
    MINUS             shift, and go to state 14
    OPEN_PARENTHESIS  shift, and go to state 15

    OPERATION           go to state 38
    OPERATION2          go to state 20
    OPERATION3          go to state 21
    OPERATION4          go to state 22
    OPERATION_BOOLEAN2  go to state 84
    OPERATION_BOOLEAN3  go to state 27


State 62

    4 expressio: ID ASSIGN OPERATION •
    5          | ID ASSIGN OPERATION • MODE
   13 OPERATION: OPERATION • PLUS OPERATION2
   14          | OPERATION • MINUS OPERATION2
   45 OPERATION_BOOLEAN3: OPERATION • EQUAL OPERATION
   46                   | OPERATION • NOT_EQUAL OPERATION
   47                   | OPERATION • GREATER_EQUAL OPERATION
   48                   | OPERATION • GREATER_THAN OPERATION
   49                   | OPERATION • LESS_THAN OPERATION
   50                   | OPERATION • LESS_EQUAL OPERATION

    MODE           shift, and go to state 85
    PLUS           shift, and go to state 48
    MINUS          shift, and go to state 49
    GREATER_THAN   shift, and go to state 50
    GREATER_EQUAL  shift, and go to state 51
    LESS_THAN      shift, and go to state 52
    LESS_EQUAL     shift, and go to state 53
    EQUAL          shift, and go to state 54
    NOT_EQUAL      shift, and go to state 55

    $default  reduce using rule 4 (expressio)


State 63

    8 expressio: ID ASSIGN OPERATION_STRING •

    $default  reduce using rule 8 (expressio)


State 64

    6 expressio: ID ASSIGN OPERATION_BOOLEAN •
   35 OPERATION_BOOLEAN: OPERATION_BOOLEAN • OR OPERATION_BOOLEAN1

    OR  shift, and go to state 60

    $default  reduce using rule 6 (expressio)


State 65

    7 expressio: ID_BOOL ASSIGN OPERATION_BOOLEAN •
   35 OPERATION_BOOLEAN: OPERATION_BOOLEAN • OR OPERATION_BOOLEAN1

    OR  shift, and go to state 60

    $default  reduce using rule 7 (expressio)


State 66

   13 OPERATION: OPERATION • PLUS OPERATION2
   14          | OPERATION • MINUS OPERATION2
   32 OPERATION4: OPEN_PARENTHESIS OPERATION • CLOSED_PARENTHESIS
